<resources>
    <string name="versioncode">1</string>
    <string name="versionname">V1.0.0</string>
    <string name="versioncheck">Check Version</string>
    <string name="policy">Policy</string>
    <string name="aboutus">About Us</string>

    <string name="app_name">NewsAggregation</string>
    <string name="title_news">News</string>
    <string name="title_github">GitHub</string>
    <string name="title_csdn">CSDN</string>
    <string name="title_stackoverflow">StackOverFlow</string>
    <string name="title_picture">Picture</string>
    <string name="title_signin">SignIn</string>
    <string name="title_about">About</string>
    <string name="title_exit">Exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="notice_title">Aggregating Your News World</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
